--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,6 @@
         <canvas id="canvas-2d" width="1000" height="1000" style="position:absolute;width:100%;height:100%;object-fit:contain;"></canvas>
     </div>
     <img id="player-image" src="/static/player.gif" style="display: none;">
-    <script src="/static/game.js"></script>
+    <script src="/static/game-3d.js"></script>
   </body>
 </html>
